<resources>
    <string name="app_name">PaymentBD</string>
    <string name="balance">Balance</string>
    <string name="send">Send Money</string>
    <string name="pay_bill">Bill Pay</string>
    <string name="cash_out">Cash Out</string>
    <string name="payment">Payment</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="register_now">Register Now</string>
    <string name="password">Password</string>
    <string name="statement">Statement</string>
    <string name="merchant_pay">Merchant Pay</string>
    <string name="ask_for_receiver_id">Please Enter Receiver ID</string>
    <string name="receiver_id">Receiver ID</string>
    <string name="continue_">Continue</string>
    <string name="Receiver_Name">Receiver Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_company">Select Company</string>
    <string name="enter_bill_info">Enter Billing Information</string>
    <string name="polli_biddut">Polli Biddut</string>
    <string name="account_number">Account Number</string>
    <string name="enter_month_year">Enter Month And Year</string>
    <string name="month_year">Month/Year</string>
    <string name="month_year_example">example : June 2018 . Type 06/2018</string>
    <string name="check_bill">Check Bill</string>
    <string name="bill_information">Bill Information</string>
    <string name="member_id">Member ID </string>
    <string name="name">Name </string>
    <string name="company_name">Company Name </string>
    <string name="bill_id">Bill ID </string>
    <string name="bill_month">Bill Month </string>
    <string name="net_amount">Net Amount </string>
    <string name="total_amount">Total Amount </string>
    <string name="status">Status </string>
    <string name="enter_pin">Enter Your PIN </string>
    <string name="pay_now">Pay Now </string>
    <string name="vat">VAT </string>
    <string name="wasa">WASA</string>
    <string name="bdcom">BD COM</string>
    <string name="petro_bangla">Petro Bangla</string>
    <string name="pgcb">PGCB</string>
    <string name="net_balance">Net Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="refresh">Refresh</string>
    <string name="enter_agent_number">Enter Agent Number</string>
    <string name="agent_number">Agent Number</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="agent_id">Agent ID</string>
    <string name="agent_name">Agent Name</string>
    <string name="agent_district">Agent District</string>
    <string name="amount">Amount</string>
    <string name="fees">Fees</string>
    <string name="or">Or</string>
    <string name="remaining_balance">Remaining Balance</string>
    <string name="enter_4_digit">Enter 4 Digit Pin</string>
    <string name="confirm_4_digit">Confirm 4 Digit Pin</string>
    <string name="confirm_transaction">Confirm Transaction</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_product_code">Enter Product Code</string>
    <string name="product_code">Product Code</string>
    <string name="q_code_scan">QCode Scan</string>
    <string name="product_id">Product ID</string>
    <string name="product_name">Product Name</string>
    <string name="store_name">Store Name</string>
    <string name="price">Price</string>
    <string name="reference_optional">Reference (Optional)</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="street_address">Street Address</string>
    <string name="district_name">District Name</string>
    <string name="finish">Finish</string>
    <string name="receiver_id_phone">Receiver ID / Phone</string>
    <string name="receiver_district">Receiver District</string>
    <string name="tran_inf">Transaction Information</string>
    <string name="rec_acc_type">Rec. Acc. Type</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="date">Date</string>
    <string name="type">Type</string>


</resources>
