<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textAlignment="center"
            />
        <EditText
            android:id="@+id/register_user_name"
            android:hint="@string/full_name"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_library_books_black_24dp"
            android:inputType="text"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_user_email"
            android:hint="@string/email"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_my_email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_user_phone"
            android:hint="@string/phone_number"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:inputType="phone"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_password_1"
            android:hint="@string/password"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_my_lock_black_24dp"
            android:inputType="textPassword"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_password_2"
            android:hint="@string/confirm_password"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_my_lock_black_24dp"
            android:inputType="textPassword"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_transaction_pin_1"
            android:hint="@string/enter_pin"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:inputType="numberDecimal"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"

            />
        <EditText
            android:id="@+id/register_transaction_pin_2"
            android:hint="@string/confirm_4_digit"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock_open_black_24dp"
            android:inputType="numberDecimal"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_user_address"
            android:hint="@string/street_address"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:inputType="text"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <EditText
            android:id="@+id/register_user_district"
            android:hint="@string/district_name"
            android:layout_gravity="center_horizontal"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_add_location_black_24dp"
            android:inputType="text"
            android:layout_marginTop="10sp"
            style="@style/input_field_2"
            />
        <Button
            android:id="@+id/register_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:textColor="#fff"
            android:paddingLeft="40sp"
            android:paddingRight="40sp"
            android:background="@color/LightSeaGreen"
            android:layout_marginTop="20sp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="20sp"
            />

    </LinearLayout>
</ScrollView>