<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="16"
        android:background="@color/SkyBlue"
        android:padding="5dp"
        android:id="@+id/demo_list_view_earning_report"
        >
        <TextView
            android:id="@+id/demo_list_view_statement_id"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_id"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />
        <TextView
            android:id="@+id/demo_list_view_statement_date"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />

        <TextView
            android:id="@+id/demo_list_view_statement_transaction_type"
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />

        <TextView
            android:id="@+id/demo_list_view_statement_amount"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            android:drawablePadding="5dp"
            />

    </LinearLayout>
</LinearLayout>