<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Payments">

    <LinearLayout
        android:id="@+id/payment_layout_product_code_request"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/enter_product_code"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/payment_input_product_code"
            style="@style/input_field_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/product_code" />

        <Button
            android:id="@+id/payment_button_continue"
            style="@style/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/continue_" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textSize="30sp"
            android:textColor="@color/Black"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/payment_button_ScanNow"
            style="@style/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/q_code_scan" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/payment_layout_product_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#B4DFE0"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:padding="5sp"
                android:text="@string/product_id"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_info_product_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="3"
                android:padding="5sp"
                android:text="@string/product_id"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#B4DFE0"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:padding="5sp"
                android:text="@string/product_name"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_info_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="3"
                android:padding="5sp"
                android:text="@string/product_name"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#B4DFE0"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:padding="5sp"
                android:text="@string/store_name"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_info_product_owner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="3"
                android:padding="5sp"
                android:text="@string/store_name"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#B4DFE0"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:padding="5sp"
                android:text="@string/price"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_info_product_net_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="3"
                android:padding="5sp"
                android:text="@string/price"
                android:textColor="@color/Blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#B4DFE0"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:padding="5sp"
                android:text="@string/vat"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_info_product_vat_amount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="3"
                android:padding="5sp"
                android:text="@string/vat"
                android:textColor="@color/Blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#B4DFE0"
            android:weightSum="5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="2"
                android:padding="5sp"
                android:text="@string/total_amount"
                android:textColor="@color/Black"
                android:textSize="20sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/payment_info_product_total_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_weight="3"
                android:padding="5sp"
                android:text="@string/total_amount"
                android:textColor="@color/Blue"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/payment_input_user_comment"
                style="@style/input_field_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:hint="@string/reference_optional"
                />

            <EditText
                android:id="@+id/payment_input_user_pin"
                style="@style/input_field_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:hint="@string/enter_4_digit"
                android:inputType="numberDecimal"/>

            <Button
                android:id="@+id/payment_button_submit"
                style="@style/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="@string/confirm_payment" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>