<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Statement"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="16"
        android:background="@color/DeepSkyBlue"
        android:padding="5dp"
        android:layout_marginBottom="2dp"
        >
        <TextView
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_id"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />
        <TextView
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />
        <TextView
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />
        <TextView
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/Black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ListView
            android:id="@+id/list_view_statement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/SkyBlue"
            android:listSelector="@color/DeepSkyBlue"
            android:dividerHeight="2dp"
            android:divider="@color/white"
            >
        </ListView>
    </LinearLayout>
</LinearLayout>