<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_user_phone"
            style="@style/input_field_2"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:drawableStart="@drawable/ic_phone_android_black_24dp"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/login_user_password"
            style="@style/input_field_2"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:drawableStart="@drawable/ic_my_lock_black_24dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:background="@color/LightSeaGreen"
            android:text="@string/login"
            android:textColor="#fff"
            android:textSize="18sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:orientation="vertical">

            <Button
                android:id="@+id/login_button_show_register_panel"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_gravity="center"
                android:background="@color/LightGrey"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:text="@string/register_now"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</LinearLayout>