<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Balance"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/ic_round"
            android:minHeight="250dp"
            android:minWidth="250dp"
            android:layout_gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="25sp"
                android:textColor="@color/Black"
                android:gravity="center"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/balance_circle_available_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/balance"
                android:textSize="28sp"
                android:textStyle="bold"
                android:textColor="@color/Black"
                android:gravity="center"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:layout_margin="5dp"
        android:background="#B4DFE0"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/net_balance"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:layout_marginStart="10sp"
            android:padding="5sp"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/balance_net_balance"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/net_balance"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_marginStart="10sp"
            android:padding="5sp"
            android:drawableStart="@drawable/ic_bdt"
            android:drawablePadding="5dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="6"
        android:layout_margin="5dp"
        android:background="#B4DFE0">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/available_balance"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:layout_marginStart="10sp"
            android:padding="5sp"
            android:textStyle="italic"
            />
        <TextView
            android:id="@+id/balance_available_balance"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/available_balance"
            android:textSize="20sp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:layout_marginStart="10sp"
            android:padding="5sp"
            android:drawableStart="@drawable/ic_bdt"
            android:drawablePadding="5dp"/>

    </LinearLayout>
    <Button
        android:id="@+id/balance_button_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        style="@style/button3"
        android:text="@string/refresh"
        android:textStyle="bold"
        android:textSize="25sp"/>

</LinearLayout>